--- a/angular.json
+++ b/angular.json
@@ -34,14 +34,9 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+               }
               ],
               "outputHashing": "all"
             },
